[package]
name = "cuda-lease"
version = "0.1.0"
edition = "2021"
description = "Lease management — time-bounded resource grants, renewal, expiry, and distributed lease coordination"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-lease"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
